# webview

./: .gitignore  Cargo.toml  eslint.config.mjs  index.d.ts  index.js  nodemon.json  package-lock.json  package.json  uno.config.ts
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: index.mjs
scripts/: buildAndPlay.mjs  reload.mjs
src/: hit_test.rs  lib.rs  user_event.rs
src/assets/: phone.data.json
ui/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config copy.mts  vite.config.mts  vite.config.ts
ui/src/: app.tsx  index.html  main.ts  main.tsx  style.css
ui/src/components/: PhoneInfo.ts  TitleBar.ts  deviceInfo.tsx  menu.tsx  trafficLight.tsx
ui/src/components/ui/: popover.tsx
ui/src/constants/: USER_EVENT.ts  phoneInfo.ts
