[package]
edition = "2021"
name = "mp-view_webview"
version = "0.0.0"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [ "napi4" ] }
napi-derive = "2.12.2"
tao = "0.30.5"
window-vibrancy = "0.5.2"
wry = "0.46.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
